TestCases/Errors/bh_recruitment/run.bat
spm -r -q -g 0 > Expected.log
